test/libsolidity/syntaxTests/inheritance/duplicated_constructor_call/base_multi_no_constructor_modifier_style.sol
contract C { constructor(uint) {} }
contract A is C { constructor() C(2) {} }
contract B is C { constructor() C(2) {} }
contract D is A, B { }
// ----
// DeclarationError 3364: (120-142='contract D is A, B { }'): Base constructor arguments given twice.
